--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
 <p>The Moov Now  device will track your ride, run, swim, cycle, box, HIIT and crossfit accurately, but it does not have any export option or backup options. This is a modified version of the official Moov Now Coach application wich allows you to export swimming timings to the "MoovBackup" folder as csv files. You have to open and close the swimming in history, and the swimming will be saved. It works on any Android 4.4 device or more than 4.4 or on an Android PC emulator, such as Nox. 
 Install and enjoy.</p>
 You can download from here:
-<p>https://androidfilehost.com/?fid=6006931924117917386</p>
 
-How to use:
+ <a href="https://androidfilehost.com/?fid=6006931924117917386" download>https://androidfilehost.com/?fid=6006931924117917386
+ </a>
+
+<p>How to use:</p>
 <p>
 Install Moov Coach MOD apk to android device or android emulator such NOX
 </p>
