--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@ You can download from here:
 
  <a href="https://androidfilehost.com/?fid=6006931924117917386" download>https://androidfilehost.com/?fid=6006931924117917386
  </a>
+ 
+ <p>Update:
+The Moov Now app has a hidden timing, one that monitors every swimming stroke. 
+For the ones that want to monitor the timing of every single stroke, I have built a new version of my MOD to export strokes to csv file.</p>
+ 
+ <a href="https://www.androidfilehost.com/?fid=1899786940962596201"download>https://www.androidfilehost.com/?fid=1899786940962596201
+ </a> 
 
 <p>How to use:</p>
 <p>
@@ -50,7 +57,7 @@ You can read your swim as csv.
 You can open csv file with Excel.
  </p>
 <p>
-<img src="https://raw.githubusercontent.com/uM0d/Moov-Now-swimming-data-export/master/7.png">
+<img src="https://raw.githubusercontent.com/uM0d/Moov-Now-swimming-data-export/master/Strokes.png">
 </p>
 
 
