--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@ You can download from here:
  </a>
  
  <p>Update:
-The Moov Now app has a hidden timing, one that monitors every swimming stroke. 
-For the ones that want to monitor the timing of every single stroke, I have built a new version of my MOD to export strokes to csv file.</p>
+Update: The Moov Now app has a hidden timing, one that monitors every swimming stroke. For the ones that want to monitor the timing of every single stroke, I have built a new version of my MOD to export strokes to csv file.
+The new version is available to download from </p>
  
  <a href="https://www.androidfilehost.com/?fid=1899786940962596201"download>https://www.androidfilehost.com/?fid=1899786940962596201
  </a> 
