--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
 <h1>Moov Now data export</h1>
 <p>The Moov Now  device will track your ride, run, swim, cycle, box, HIIT and crossfit accurately, but it does not have any export option or backup options. This is a modified version of the official Moov Now Coach application wich allows you to export swimming timings to the "MoovBackup" folder as csv files. You have to open and close the swimming in history, and the swimming will be saved. It works on any Android 4.4 device or more than 4.4 or on an Android PC emulator, such as Nox. 
 Install and enjoy.</p>
-You can download from here:
+
 
  <a href="https://androidfilehost.com/?fid=6006931924117917386" download>https://androidfilehost.com/?fid=6006931924117917386
  </a>
  
  <p>Update:
-Update: The Moov Now app has a hidden timing, one that monitors every swimming stroke. For the ones that want to monitor the timing of every single stroke, I have built a new version of my MOD to export strokes to csv file.
-The new version is available to download from </p>
+I built a new Moov Now Coach MOD to export swim sessions to FIT and csv files. Just open your swim session from history and find into MoovBackup folder the exported files. Use FIT files to upload your workout to Strava.com and Swim.com or analyse on SwimmingWatchTools.com Use csv files to analyse on computer with spreadsheet app. Every swimming stroke timing is included in csv file.
+
+Download this MOD from  </p>
  
- <a href="https://www.androidfilehost.com/?fid=1899786940962596201"download>https://www.androidfilehost.com/?fid=1899786940962596201
+ <a href="https://www.androidfilehost.com/?fid=1899786940962612303"download>https://www.androidfilehost.com/?fid=1899786940962612303
  </a> 
 
 <p>How to use:</p>
