--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@ Install Moov Coach MOD apk to android device or android emulator such NOX
 <p>
 <img src="https://raw.githubusercontent.com/uM0d/Moov-Now-swimming-data-export/master/1.png"> 
 </p>
+ <p>
+For Android greater than 6.0 (sdk 23), check and grant storage permission for this app.
+</p>
+<p>
+<img src="https://raw.githubusercontent.com/uM0d/Moov-Now-swimming-data-export/master/Permissions.png"> 
+</p>
 <p>
 Open Moov Coach MOD and wait to restore your backup
 </p>
