--- a/index.html
+++ b/index.html
@@ -62,7 +62,10 @@ You can open csv file with Excel.
 <p>
 <img src="https://raw.githubusercontent.com/uM0d/Moov-Now-swimming-data-export/master/Strokes.png">
 </p>
-
+ <p>
+  Upload your FIT files to 
+ </p>
+<a href="https://www.strava.com" /a> 
 
 </body>
 </html>
