--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ You can open csv file with Excel.
  <p>
   Upload your FIT files to 
  </p>
-<a href="https://www.strava.com" /a> 
+<a href="https://www.strava.com" > 
 
 </body>
 </html>
